--- a/templates/base.html
+++ b/templates/base.html
@@ -60,11 +60,13 @@
                 <nav class="col-md-3 col-lg-2 d-md-block sidebar collapse">
                     <div class="position-sticky pt-3">
                         <ul class="nav flex-column">
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'home' %}">
-                                    <i class="fas fa-home me-2"></i>Inicio
-                                </a>
-                            </li>
+                            {% if user.role != 'employee' %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'home' %}">
+                                        <i class="fas fa-home me-2"></i>Inicio
+                                    </a>
+                                </li>
+                            {% endif %}
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'inventory_new_list' %}">
                                     <i class="fas fa-mobile-alt me-2"></i>Inventario Nuevos
@@ -75,16 +77,18 @@
                                     <i class="fas fa-mobile-alt me-2"></i>Inventario Usados
                                 </a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'add_phone' %}">
-                                    <i class="fas fa-plus me-2"></i>Agregar Celular
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'sales_list' %}">
-                                    <i class="fas fa-shopping-cart me-2"></i>Ventas
-                                </a>
-                            </li>
+                            {% if user.role != 'employee' %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'add_phone' %}">
+                                        <i class="fas fa-plus me-2"></i>Agregar Celular
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'sales_list' %}">
+                                        <i class="fas fa-shopping-cart me-2"></i>Ventas
+                                    </a>
+                                </li>
+                            {% endif %}
                             {% if user.is_staff %}
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'reports' %}">
