--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -6,14 +7,14 @@
     <title>{% block title %}Tienda de Celulares{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link href="/static/modern-dark.css" rel="stylesheet">
+
 </head>
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark ">
         <style>
             .navbar {
-                background: #757575 !important;
+                background: #36363656 !important;
                 box-shadow: 0 2px 8px rgba(0,0,0,0.2);
             }
         </style>
