--- a/templates/inventory/search_phone.html
+++ b/templates/inventory/search_phone.html
@@ -143,18 +143,21 @@
 {% block extra_js %}
 <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.3/build/qrcode.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.js"></script>
+
+{% if phone %}
+<script>
+    // Generar QR del celular encontrado
+    QRCode.toCanvas(document.getElementById('phone-qrcode'), "{{ phone.get_qr_data }}", {
+        width: 150,
+        height: 150,
+        margin: 2
+    });
+</script>
+{% endif %}
+
 <script>
     let qrScanner = null;
     let scanning = false;
-
-    // Generar QR del celular encontrado
-    {% if phone %}
-        QRCode.toCanvas(document.getElementById('phone-qrcode'), "{{ phone.get_qr_data }}", {
-            width: 150,
-            height: 150,
-            margin: 2
-        });
-    {% endif %}
 
     function startQRScanner() {
         const video = document.getElementById('qr-video');
